--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A plan tracker </title>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
+
 </head>
 <body>
-    <h1>
-        create our new project 
-    </h1>
+    <div class="content">
+        <h1>People entered:</h1>
+<h2 id="count">0</h2>
+ <button id="btn" class="button">INCREMENT</button>
+    </div>
+<div>
+   
+</div>
+
     
 </body>
 </html>
