--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>People entered:</h1>
 <h2 id="count">0</h2>
  <button id="btn" class="button">INCREMENT</button>
+         <button id="save" class="buttontwo">SAVE THEN</button>
     </div>
 <div>
    
